# Async_API_sprint_1_group_repo

./: .env.template  Makefile  README.md  docker-compose.dev.yml  docker-compose.tests.yml  docker-compose.yml
configs/: nginx.conf
configs/confd/: site.conf
etl/: .env.template  .gitignore  Dockerfile  README.md  create_index.sh  docker-compose.yml  dump.sql  main.py  requirements.txt  start.sh
etl/etl/: config.py  etl_proccess.py  extract.py  load.py  transform.py
etl/etl_libs/: config.py  create_index.py  elastic_lib.py  models.py  storage.py
fastapi-project/: .dockerignore  Dockerfile  main.py  pyproject.toml  requirements.txt
fastapi-project/src/api/: pagination.py  params.py  validators.py
fastapi-project/src/api/v1/: films.py  genres.py  persons.py
fastapi-project/src/core/: api_settings.py  config.py  logger.py
fastapi-project/src/db/elastic/kwargs_transformer/: __init__.py  constraints.py  handlers.py  kwargs_transformer.py
fastapi-project/src/models/: __init__.py  base_orjson.py  film.py  genre.py  person.py
fastapi-project/src/schemas/: __init__.py  films.py  genre.py  person.py
fastapi-project/src/services/: __init__.py  _redis.py  base.py  elastic.py  film_example.py  films.py  genres.py  persons.py  redis.py  transfer.py
fastapi-project/src/utils/kwargs_transformer/: __init__.py  constraints.py  handlers.py  transformer.py
fastapi-project/tests/functional/: __init__.py  conftest.py  docker-compose.yml  requirements.txt  settings.py
fastapi-project/tests/functional/fixtures/: client_fixtures.py  data_factories.py  es_fixtures.py  redis_fixtures.py
fastapi-project/tests/functional/src/: test_films.py  test_genres.py  test_persons.py  test_search.py  test_test.py
fastapi-project/tests/functional/testdata/: elasticsearch_input.py  genres.json  movies.json  persons.json
fastapi-project/tests/functional/utils/: generate.py  tests_entrypoint.sh  wait_for_services.py
(+17 files in other folders)
