[tool.poetry]
name = "fastapi-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
redis = "4.4.2"
elasticsearch = { version = "7.9.1", extras = ["async"] }
fastapi = "0.61.2"
orjson = "3.9.12"
pydantic = "1.9.0"
uvicorn = "0.12.2"
uvloop = "0.17.0"
fastapi-pagination = "0.9.0"
gunicorn = "21.2.0"
httptools = "0.6.1"
aiohttp = "3.9.3"
async-timeout = "4.0.3"
python-dotenv = "^1.0.1"
backoff = "^2.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.3"
pytest-asyncio = "0.21.1"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.0.0"
isort = "^5.13.2"
flake8-pyproject = "^1.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# -- Flake8 --
[tool.flake8]
max-line-length = 135
exclude = [
    "__submodules__",
    ".git",
    "__samples__",
    ".venv",
]
max-returns-amount = 10
max-parameters-amount = 25
per-file-ignores = [
    'tests/*:F811'
]

# -- isort --
[tool.isort]
line_length = 135
multi_line_output = 3
sections = ['FUTURE', 'STDLIB', 'THIRDPARTY', 'FIRSTPARTY', 'LOCALFOLDER']